<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Image Processor</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="start_now">Start Now!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_history">History</string>
    <string name="menu_about">About</string>
    <string name="select_image_from_gallery">Select image from gallery</string>
    <string name="capture_image">Capture Image</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_other">Other</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="camera">Camera</string>
    <string name="an_image_will_be_shown_here">An image will be shown here</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="title_activity_settings">Settings</string>
    <string name="theme_header">Theme</string>
    <string name="language_header">Language</string>
    <string name="language_title">Language</string>
    <string name="others_header">Others</string>
    <string name="about_dialog_title">About</string>
    <string name="action_quit">Quit</string>
    <string name="quit_dialog_message">Are you sure to quit the application?</string>
    <string name="cancel">Cancel</string>
    <string name="no_camera">Sorry! This device does not have a camera</string>
    <string name="system_camera">System Camera</string>
    <string name="showImage">Preview</string>
    <string name="system_gallery">System Gallery</string>
    <string name="snack_bar_text">An image deleted</string>
    <string name="snack_bar_undo">UNDO</string>
    <string name="camera_opened">Camera Opened</string>
    <string name="delete">DELETE</string>
    <string name="no_history">No history</string>
    <string name="crop">CROP</string>
    <string name="continue_text">CONTINUE</string>

    <string name="action_about">About</string>
    <string name="dark_mode_on">Dark Mode On</string>
    <string name="dark_mode_off">Dark Mode Off</string>

    <string name="device">This Device</string>
    <string name="permission_granted_message">This app needs some permissions to work without any problems</string>
    <string name="permission_denied_message">You have denied some permissions. Go to Settings to grant permissions needed</string>
    <string name="preview">Preview</string>
    <string name="edit">Edit</string>
    <string name="detect">Detect</string>
    <string name="history_view">View</string>
    <string name="history_details">Details</string>
    <string name="history_delete">Delete</string>
    <string name="loading">Loading…</string>
    <string name="no_loading">All has been loaded</string>
    <string name="history_share">Share</string>
    <string name="photo_tag">%d / %d</string>
    <string name="save_success">Save successfully</string>
    <string name="save_failed">Save failed</string>
    <string name="share_to">Share image to</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_stitcher">Stitcher</string>
    <string name="custom_camera">Real Time Camera</string>
    <string name="real_time">Real Time Detection</string>
    <string name="color_effects_not_supported">Color effects are not supported!</string>
    <string name="color_effects">Color Effects</string>
    <string name="preview_canny">Canny</string>
    <string name="preview_gray">Gray</string>
    <string name="preview_rgba">RGBA</string>
    <string name="zoom">Zoom</string>
    <string name="preview_contours">Contours</string>
    <string name="shapes">Detect</string>
    <string name="save">Save</string>
    <string name="capture">Capture</string>
    <string name="save_msg">Image has been saved</string>
    <string name="triangle">Triangle</string>
    <string name="quadrangle">Quadrangle</string>
    <string name="pentagon">Pentagon</string>
    <string name="hexagon">Hexagon</string>
    <string name="circle">Circle</string>
    <string name="threshold">Threshold</string>
    <string name="show_canny">Canny</string>
    <string name="log">Log</string>
    <string name="output_log">Output Log</string>
    <string name="camera_msg">Choose a camera type</string>
    <string name="gallery">Gallery</string>
    <string name="gallery_msg">Choose a gallery type</string>
    <string name="settings">Settings</string>
    <string name="settings_msg">Config dark mode, internationalization, etc.</string>
    <string name="history">History</string>
    <string name="history_msg">View saved images in the past</string>
    <string name="stitcher">Stitcher</string>
    <string name="stitcher_msg">An image stitching tool</string>
    <string name="my_final_year_project">My Final Year Project</string>
    <string name="info">Info</string>
    <string name="naichuan_zhang">Naichuan Zhang</string>
    <string name="author">Author</string>
    <string name="github_link">https://github.com/naichuan-zhang</string>
    <string name="github_link_text">Github Link</string>
    <string name="email_address">Email Address</string>
    <string name="email">18111521@studentmail.ul.ie</string>
    <string name="phone_number">(+353)833955546</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="view_project_details">View Project Details</string>
    <string name="ellipse">Ellipse</string>
    <string name="title_activity_real_time">Real Time Detection</string>
</resources>