<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/theme_header">

        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:summaryOff="@string/off"
            app:summaryOn="@string/on"
            app:title="@string/dark_mode" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/language_header">

<!--        <ListPreference-->
<!--            app:key="language"-->
<!--            app:defaultValue="english"-->
<!--            app:entries="@array/language_entries"-->
<!--            app:entryValues="@array/language_values"-->
<!--            app:title="@string/language_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

        <Preference
            app:key="language"
            android:title="@string/language_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/others_header">


    </PreferenceCategory>

</PreferenceScreen>
