<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.imageprocessor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="com.example.imageprocessor.ui.camera.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_nav_camera_to_previewFragment"
            app:destination="@id/previewFragment"
            app:enterAnim="@anim/fragment_fade_enter" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.imageprocessor.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.imageprocessor.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/previewFragment"
        android:name="com.example.imageprocessor.ui.preview.PreviewFragment"
        android:label="Preview"
        tools:layout="@layout/preview_fragment" />

    <!--    <fragment-->
<!--        android:id="@+id/nav_settings"-->
<!--        android:name="com.example.imageprocessor.ui.settings.SettingsFragment"-->
<!--        android:label="@string/menu_settings"-->
<!--        tools:layout="@layout/fragment_settings" />-->

</navigation>